# cmake_test

./: CMakeLists.txt
framework/: CMakeLists.txt
framework/HelloQt/: CmakeLists.txt  ImageAlg.cpp  ImageAlg.h  eigen.h  includes.h  main.cpp  qtclass.cpp  qtclass.hpp  utility.h
framework/OpenCLproject/: CMakeLists.txt  opencl_project.cpp
framework/basic_proj/: tutorial2.cpp
framework/boost_proj/: CMakeLists.txt  boost_tutorial.cpp
framework/cimg_proj/: CMakeLists.txt  cimg_proj.cpp
framework/jpeg_io/: CMakeLists.txt  jpeg_io.cpp
framework/library_creation/: tutlib.h
framework/multiple_files/: CMakeLists.txt
framework/play_with_cuda/: CMakeLists.txt  cuda_kernel.cu
framework/tutlib/: CMakeLists.txt  tutlib.cpp
framework/tutorial/: testheader1.h
framework/tutorial2/: CMakeLists.txt
srcs/tutorial/: tester.cpp  tester2.cpp  testheader2.hpp
